fix: homepage tournament card text overflow

--- a/src/containers/home/style.module.scss
+++ b/src/containers/home/style.module.scss
@@ -86,7 +86,7 @@
           .second {
             display: flex;
             margin-top: 10px;
-            height: 100%;
+            height: 80%;
 
             .description {
               overflow: hidden;
